--- a/client/src/components/hostPage.css
+++ b/client/src/components/hostPage.css
@@ -1,5 +1,7 @@
 .content_container{
     padding-left: 260px;
+    width: 100vw;
+    box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
@@ -97,17 +99,29 @@
     float: left;
     padding: 5px 0;
     text-align: left;
+    width: calc(100% - 100px);
 }
 
 .result > .info > .top {
     font-size: 1rem;
     line-height: 20px;
+    width: 100%;
+    height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .result > .info > .bottom {
     font-size: 0.75rem;
     line-height: 20px;
     margin-top: 4px;
+
+    width: 100%;
+    height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .result > .info > .bottom .dot {
